# gitbot

./: .gitignore  CONTRIBUTING.md  README.md  debug_git.py  main.py  pyproject.toml
gitbot/: agent.py  main.py  onboarding.py  ui.py
gitbot/cli/: commands.py
gitbot/core/: agent.py  config.py  git_orchestrator.py
gitbot/llm/: providers.py
gitbot/mcp/: client.py
gitbot/onboarding/: wizard.py
gitbot/tools/: git_tools.py
tests/: test_git_orchestrator.py
