[project]
name = "gitbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click",
    "rich",
    "pyfiglet",
    "mcp",
    "langchain",
    "langchain-groq",
    "langchain-ollama",
    "langchain-google-genai",
    "langchain-core",
]

[project.scripts]
gitbot = "gitbot.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
